# multi-tenant-auth-server

./: .dockerignore  .env.example  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.aws.yml  docker-compose.production.yml  docker-compose.yml  main.py  nginx.conf  pyproject.toml  requirements.txt  server.py
app/: dependencies.py  exceptions.py  middleware.py
app/core/: config.py  keycloak.py  keycloak_client.py  logging.py
app/models/: __init__.py  auth.py
app/routes/: __init__.py  admin.py  auth.py  console.py  health.py  info.py  smtp_admin.py
app/utils/: __init__.py  error_handler.py  keycloak_urls.py  route_error_handler.py
