[project]
name = "multi-tenant-auth-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama==0.4.6",
    "cryptography==43.0.3",
    "fastapi[standard]>=0.116.1",
    "httpx==0.27.2",
    "pydantic==2.10.4",
    "pydantic-settings==2.8.0",
    "python-dotenv==1.0.1",
    "python-jose[cryptography]==3.3.0",
    "python-keycloak==5.7.0",
    "structlog==24.4.0",
]
